--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Pavel K,",
   "license": "ISC",
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
