--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./build",
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
