--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node build/app.js",
-    "dev": "ts-node-dev app.ts"
+    "start:multi": "ts-node-dev app_multi.ts",
+    "dev": "ts-node-dev app.ts",
+    "some": "nodemon --exec ts-node app.ts",
+    "some2": "ts-node --esm app.ts",
+    "test": "jest"
   },
   "author": "Pavel K,",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/uuid": "^9.0.8",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.3",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
