webpack setup, minor fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
-{
-  
+{  
   "compilerOptions": {
     "outDir": "./build",
     "target": "ES2022",    
@@ -9,8 +8,14 @@
     "esModuleInterop": true,                            
     "forceConsistentCasingInFileNames": true,           
     "strict": true,                                      
-    "skipLibCheck": true                                 
+    "skipLibCheck": true ,
+    "noImplicitAny": true,
+    "removeComments": true,
+    "preserveConstEnums": true,
+    "declaration": true,
+    "moduleResolution": "node",
+    "rootDir": "."                             
   },
- 
+  "include": ["src"]
   
 }
