--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "CRUD task",
   "main": "app.js",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node build/app.js",
-    "start:multi": "ts-node-dev app_multi.ts",
-    "dev": "ts-node-dev app.ts",
+    "start:prod": "webpack && node build/bundle.js",
+    "start:multi": "ts-node-dev src/app_multi.ts",
+    "start:dev": "ts-node-dev src/app.ts",
     "test": "jest"
   },
   "author": "Pavel K,",
@@ -15,12 +14,21 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/uuid": "^9.0.8",
+    "@webpack-cli/generators": "^3.0.7",
+    "crypto-browserify": "^3.12.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "stream-http": "^3.2.0",
     "ts-jest": "^29.1.2",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "dotenv": "^16.4.2",
